--- a/weblab1.html
+++ b/weblab1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
  <HTML>
    <HEAD>
-      <TILE>
+      <TITLE>
         MY RESUME PAGE 15/07/2022
-      </TILE>
+      </TITLE>
     </HEAD>
-    <BODY style="background-color:skyblue;">
+    <BODY">
     <H3 style="color: black";""><CENTRE><B><U>_____________MY RESUME PAGE________________</U> </B></CENTRE></H3>
  
   
