--- a/weblab1.html
+++ b/weblab1.html
@@ -5,7 +5,7 @@
         MY RESUME PAGE 15/07/2022
       </TITLE>
     </HEAD>
-    <BODY">
+    <BODY>
     <H3 style="color: black";""><CENTRE><B><U>_____________MY RESUME PAGE________________</U> </B></CENTRE></H3>
  
   
