--- a/weblab1.html
+++ b/weblab1.html
@@ -6,9 +6,7 @@
       </TITLE>
     </HEAD>
     <BODY>
-    <H3><CENTRE><B><U>_____________MY RESUME PAGE________________</U> </B></CENTRE></H3>
- 
-  
+    <H3>_____________MY RESUME PAGE________________</H3>
    <img jsaction="rcuQ6b:trigger.M8vzZb;" class="rg_i Q4LuWd" jsname="Q4LuWd" width="231" height="151" alt="mask | Definition, History, Uses, &amp; Facts | Britannica" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnLZS4r8KXbkgx8vqItNrOzWJAI8W6Xaj-1g&amp;usqp=CAU" data-iml="39309.5" align ="right">
   <P><i>
     M AJAY KUMAR<BR>
