--- a/weblab1.html
+++ b/weblab1.html
@@ -4,13 +4,7 @@
     <title>MY RESUME PAGE</title>
     </head>
     <body>
-        <style>
-        table, th, td {
-            border: solid rgb(214, 14, 14);
-            border-collapse: collapse;
-        }</style>
-    <center>
-        <h2>MY RESUME PAGE</h2></center>
+        <h2 style= "align:centre">MY RESUME PAGE</h2>
     <p>Ajay Kumar<br>No.62, Karunya Nagar<br>Coimbatore-641-114<br>Ph-9711342225<br>Email:kilji_shito@kaitsu.com</p>
     <hr>
 <img src="https://st4.depositphotos.com/1012074/20946/v/450/depositphotos_209469984-stock-illustration-flat-isolated-vector-illustration-icon.jpg" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb KAlRDb" alt="Generic profile image Vector Art Stock Images | Depositphotos" data-noaft="1" style="width: 126px; height: 126px; margin: 0px;align:right ">
