--- a/55.html
+++ b/55.html
@@ -18,7 +18,7 @@
         <h1 style="text-align:center">Heads / Tails</h1>
         <div id="d1">
             <br><br>
-        <img src="head.jpg" id ="coin">
+        <img src="h1.jpg" id ="coin">
         <button type="button" id="flip" onclick="flip()">Flip!</button>
         </div>
         <p>
@@ -33,7 +33,7 @@
             var tail = document.getElementById('num_tail');
             var h = parseInt(head.innerHTML);
             var t = parseInt(tail.innerHTML);
-            var l = ["head.jpg","tail.jpg"];
+            var l = ["h1.jpg","tail.jpg"];
             var s = Math.floor(Math.random()*2);
             if (l[s]==l[0])
             {
